--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "socket.io-client": "^2.3.0",
+    "tailwindcss": "^1.4.6",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -42,8 +43,8 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
+    "@types/socket.io-client": "^1.4.33",
     "autoprefixer": "^9.8.4",
-    "postcss-cli": "^7.1.1",
-    "tailwindcss": "^1.4.6"
+    "postcss-cli": "^7.1.1"
   }
 }
