--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll-to-bottom": "^3.0.0",
     "socket.io-client": "^2.3.0",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.7.5"
@@ -42,9 +44,12 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.5",
     "@types/react-router-dom": "^5.1.5",
     "@types/socket.io-client": "^1.4.33",
     "autoprefixer": "^9.8.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "postcss-cli": "^7.1.1"
   }
 }
