--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll-to-bottom": "^3.0.0",
+    "react-top-loading-bar": "^1.2.0",
     "socket.io-client": "^2.3.0",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.7.5"
